Fixing ansible 'extra vars' value from 'use_s2i_ubi' to just 'ubi'

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
@@ -113,7 +113,7 @@ RUN cd ${SCRIPTS_DIR} && \
 RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
     PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_ubi: 'yes', update_yum: 'no', ansible_python_interpreter: '/usr/bin/python2.7'}" && \
     cd ${TF_PREREQS_PLAYBOOK} && \
-    PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_s2i_ubi: 'yes', ansible_python_interpreter: '/usr/bin/python2.7'}" && \
+    PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', ubi: 'yes', ansible_python_interpreter: '/usr/bin/python2.7'}" && \
     pip3 install requests && \
     rm -rf ${FFTW_PREREQS_PLAYBOOK} && \
     rm -rf ${TF_PREREQS_PLAYBOOK}
