--- a/TensorFlow/playbooks/TensorFlow_Models/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_Models/play.yaml
@@ -15,6 +15,9 @@
     # Number of GPUs/CPUs to use
     num_devices: '{{ num_devices | default("1") }}'
 
+    # Number of training epochs
+    train_epochs: '{{ train_epochs | default("30") }}'
+
     # Set path to TensorFlow
     tensorflow_dir: '{{ tensorflow_path | default("${HOME}/tensorflow") }}'
    
@@ -58,11 +61,22 @@
     - name: Run the benchmarks
       shell: |
         cd '{{ benchmarks_dest_dir }}/models/official/vision/image_classification'
-        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} 
+        echo '-----------------------------------'
+        echo '>> BATCH SIZE: 64,   TRAIN_EPOCHS: {{ train_epochs }}'
+        echo '-----------------------------------'
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="64" --train_epochs={{ train_epochs }}
+        echo '-----------------------------------'
+        echo '>> BATCH SIZE: 128,  TRAIN_EPOCHS: {{ train_epochs }}'
+        echo '-----------------------------------'
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="128" --train_epochs={{ train_epochs }}
+        echo '-----------------------------------'
+        echo '>> BATCH SIZE: 256,  TRAIN_EPOCHS: {{ train_epochs }}'
+        echo '-----------------------------------'
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="256" --train_epochs={{ train_epochs }}
       environment:
         PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
       register: resnet56_cifar10_benchmarks_output
-      ignore_errors: yes
+      failed_when: resnet56_cifar10_benchmarks_output.rc not in [0,1]
 
     - debug:
         var: resnet56_cifar10_benchmarks_output.stdout_lines
