Adding 'NUM_EPOCHS' var to configure (via the new -e and --epochs flags). Also changing 'Deployment Configuration' section to 'Job Configuation' because we are now using jobs, not deployments. Made sure to update flags as well.

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
@@ -165,4 +165,4 @@ USER ${USER}
 ENV LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${CUDA_INSTALL_PATH}/lib64:/usr/lib64:/usr/local/cuda-10.0/compat:${NCCL_INSTALL_PATH}/lib:${TENSORRT_INSTALL_PATH}/lib
 
 # Set entrypoint
-ENTRYPOINT export ANSIBLE_LOCAL_TEMP=. && cd ${TENSORFLOW_MODELS} && ansible-playbook -i hosts play.yaml --extra-vars='{tensorflow_path: /opt/tensorflow, device_type: gpu, benchmarks_path: /home/benchmark_app/benchmarks, num_devices: $NUM_DEVICES}'
+ENTRYPOINT export ANSIBLE_LOCAL_TEMP=. && cd ${TENSORFLOW_MODELS} && ansible-playbook -i hosts play.yaml --extra-vars='{tensorflow_path: /opt/tensorflow, device_type: gpu, benchmarks_path: /home/benchmark_app/benchmarks, num_devices: $NUM_DEVICES, num_epochs: $NUM_EPOCHS}'
