--- a/TensorFlow/Dockerfiles/default/rhel7/gpu/Dockerfile.kubernetes_ubi7_cuda10_official
+++ b/TensorFlow/Dockerfiles/default/rhel7/gpu/Dockerfile.kubernetes_ubi7_cuda10_official
@@ -115,4 +115,4 @@ USER ${USER}
 ENV LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${CUDA_INSTALL_PATH}/lib64:/usr/lib64:/usr/local/cuda-10.0/compat:${TENSORRT_INSTALL_PATH}/lib
 
 # Set entrypoint
-ENTRYPOINT export ANSIBLE_LOCAL_TEMP=${ANSIBLE_TMP} && cd ${TENSORFLOW_MODELS} && ansible-playbook -i hosts play.yaml --extra-vars='{tensorflow_path: /usr/local/lib/python3.6/site-packages/tensorflow, device_type: gpu, benchmarks_path: /home/benchmark_app/benchmarks, num_devices: $NUM_DEVICES}'
+ENTRYPOINT export ANSIBLE_LOCAL_TEMP=${ANSIBLE_TMP} && cd ${TENSORFLOW_MODELS} && ansible-playbook -i hosts play.yaml --extra-vars='{tensorflow_path: /usr/local/lib/python3.6/site-packages/tensorflow, device_type: gpu, benchmarks_path: /home/benchmark_app/benchmarks, num_devices: $NUM_DEVICES, num_epochs: $NUM_EPOCHS}'
