--- a/TensorFlow/playbooks/TensorFlow_Models/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_Models/play.yaml
@@ -16,7 +16,7 @@
     num_devices: '{{ num_devices | default("1") }}'
 
     # Number of training epochs
-    train_epochs: '{{ train_epochs | default("30") }}'
+    epochs: '{{ train_epochs | default("30") }}'
 
     # Set path to TensorFlow
     tensorflow_dir: '{{ tensorflow_path | default("${HOME}/tensorflow") }}'
@@ -62,17 +62,17 @@
       shell: |
         cd '{{ benchmarks_dest_dir }}/models/official/vision/image_classification'
         echo '-----------------------------------'
-        echo '>> BATCH SIZE: 64,   TRAIN_EPOCHS: {{ train_epochs }}'
+        echo '>> BATCH SIZE: 64,   TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="64" --train_epochs={{ train_epochs }}
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="64" --train_epochs={{ epochs }}
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 128,  TRAIN_EPOCHS: {{ train_epochs }}'
         echo '-----------------------------------'
-        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="128" --train_epochs={{ train_epochs }}
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="128" --train_epochs={{ epochs }}
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 256,  TRAIN_EPOCHS: {{ train_epochs }}'
         echo '-----------------------------------'
-        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="256" --train_epochs={{ train_epochs }}
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="256" --train_epochs={{ epochs }}
       environment:
         PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
       register: resnet56_cifar10_benchmarks_output
