Remove quotes because they're confusing the Python script

--- a/TensorFlow/playbooks/TensorFlow_Models/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_Models/play.yaml
@@ -64,15 +64,15 @@
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 64,   TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="64" --train_epochs={{ epochs }}
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=64 --train_epochs={{ epochs }}
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 128,  TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="128" --train_epochs={{ epochs }}
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=128 --train_epochs={{ epochs }}
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 256,  TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size="256" --train_epochs={{ epochs }}
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=256 --train_epochs={{ epochs }}
       environment:
         PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
       register: resnet56_cifar10_benchmarks_output
