Remove 'failed_when' because it was making debugging difficult.

--- a/TensorFlow/playbooks/TensorFlow_Models/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_Models/play.yaml
@@ -64,19 +64,18 @@
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 64,   TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=64 --train_epochs={{ epochs }}
+        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=64
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 128,  TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=128 --train_epochs={{ epochs }}
+        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=128
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 256,  TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=256 --train_epochs={{ epochs }}
+        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=256
       environment:
         PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
       register: resnet56_cifar10_benchmarks_output
-      failed_when: resnet56_cifar10_benchmarks_output.rc not in [0,1]
 
     - debug:
         var: resnet56_cifar10_benchmarks_output.stdout_lines
