--- a/TensorFlow/playbooks/TensorFlow_Models/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_Models/play.yaml
@@ -58,24 +58,48 @@
         PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
 
     # Run the benchmarks
-    - name: Run the benchmarks
+    - name: Run the benchmarks with a batch size of 64
       shell: |
         cd '{{ benchmarks_dest_dir }}/models/official/vision/image_classification'
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 64,   TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=64
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=64 --train_epochs={{ epochs }}
+      environment:
+        PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
+      register: resnet56_cifar10_benchmarks_64_output
+      ignore_errors: yes
+
+    - name: Run the benchmarks with a batch size of 128
+      shell: |
+        cd '{{ benchmarks_dest_dir }}/models/official/vision/image_classification'
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 128,  TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=128
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=128 --train_epochs={{ epochs }}
+      environment:
+        PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
+      register: resnet56_cifar10_benchmarks_128_output
+      ignore_errors: yes
+
+    - name: Run the benchmarks with a batch size of 256
+      shell: |
+        cd '{{ benchmarks_dest_dir }}/models/official/vision/image_classification'
         echo '-----------------------------------'
         echo '>> BATCH SIZE: 256,  TRAIN_EPOCHS: {{ epochs }}'
         echo '-----------------------------------'
-        python3 -m resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=256
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=256 --train_epochs={{ epochs }}
       environment:
         PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
-      register: resnet56_cifar10_benchmarks_output
+      register: resnet56_cifar10_benchmarks_256_output
+      ignore_errors: yes
+
+    # Create three separate debug statements, rather than 1 statement with a list of vars to print out
+    - debug:
+        var: resnet56_cifar10_benchmarks_64_output.stdout_lines
 
     - debug:
-        var: resnet56_cifar10_benchmarks_output.stdout_lines
+        var: resnet56_cifar10_benchmarks_128_output.stdout_lines
+
+    - debug:
+        var: resnet56_cifar10_benchmarks_256_output.stdout_lines
