--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.kubernetes_ubi7_cuda10
@@ -149,7 +149,7 @@ RUN cd ${TENSORFLOW_INSTALLATION} && \
     export gcc_libs="/usr/lib/${x86_64_folder}" && \
     ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: 7, cc: '/usr/bin/gcc', gcc_libs: '${gcc_libs}', blas_library_dirs: '${FFTW_INSTALL_PATH}/lib', blas_include_dirs: '${FFTW_INSTALL_PATH}/include', tf_install_dir: '${TENSORFLOW_INSTALL_PATH}', device: 'gpu', nccl_install_path: '${NCCL_INSTALL_PATH}', use_tensorrt: 'yes', tensorrt_install_path: '${TENSORRT_INSTALL_PATH}', pythonpath: '/usr/local/lib/python3.6/site-packages', ansible_python_interpreter: '/usr/local/bin/python3', python_executable: '/usr/local/bin/python3', use_s2i: 'yes'}" && \
     cd .. && \
-    rm -rf ${TENSORFLOW_INSTALLATION} ${HOME}/build/tensorflow ${HOME}/build/numpy
+    rm -rf ${TENSORFLOW_INSTALLATION} ${HOME}/build/tensorflow ${HOME}/build/numpy ${HOME}/.cache/bazel*
 
 # Set Ansible tmp dir and permissions
 RUN chmod -R 777 ${APPDIR} && \
