--- a/TensorFlow/playbooks/TensorFlow_Models/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_Models/play.yaml
@@ -94,7 +94,19 @@
       register: resnet56_cifar10_benchmarks_256_output
       ignore_errors: yes
 
-    # Create three separate stdout_lines/stderr_lines debug statements
+    - name: Run the benchmarks with a batch size of 512
+      shell: |
+        cd '{{ benchmarks_dest_dir }}/models/official/vision/image_classification'
+        echo '-----------------------------------'
+        echo '>> BATCH SIZE: 512,  TRAIN_EPOCHS: {{ epochs }}'
+        echo '-----------------------------------'
+        python3 resnet_cifar_main.py --num_gpus={{ num_devices }} --batch_size=512 --train_epochs={{ epochs }}
+      environment:
+        PYTHONPATH: '{{ tensorflow_dir }}:{{ python3_lib_dir }}:{{ benchmarks_dest_dir }}/models'
+      register: resnet56_cifar10_benchmarks_512_output
+      ignore_errors: yes
+
+    # Create four separate stdout_lines/stderr_lines debug statements
     - debug:
         var: '{{ item }}'
       with_items:
@@ -112,3 +124,9 @@
       with_items:
         - resnet56_cifar10_benchmarks_256_output.stderr_lines
         - resnet56_cifar10_benchmarks_256_output.stdout_lines
+
+    - debug:
+        var: '{{ item }}'
+      with_items:
+        - resnet56_cifar10_benchmarks_512_output.stderr_lines
+        - resnet56_cifar10_benchmarks_512_output.stdout_lines
