--- a/TensorFlow/playbooks/package_installation/roles/tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/tensorflow/tasks/main.yaml
@@ -5,6 +5,7 @@
   pip:
     name:
       - absl-py
+      - ares
       - keras_applications
       - keras_preprocessing
       - mock
@@ -14,12 +15,20 @@
 
 - name: RHEL 7 --> Install remaining TensorFlow requirements
   yum:
-    name: glibc
+    name:
+      - gcc-c++
+      - glibc
+      - patch
+      - pcre2-devel
     install_weak_deps: no
   when: rhel_ver == '7'
 
 - name: RHEL 8 --> Install remaining TensorFlow requirements
   dnf:
-    name: glibc
+    name:
+      - gcc-c++
+      - glibc
+      - patch
+      - pcre2-devel
     install_weak_deps: no
   when: rhel_ver == '8'
