--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
@@ -289,6 +289,7 @@
 
   - name: Edit the BUILD file to change the interpreter path from /usr/bin/python2 to /usr/bin/python3
     replace:
+      path: '{{ TENSORFLOW_BUILD_DIR }}/third_party/py/BUILD'
       regexp: '    interpreter_path = "/usr/bin/python2",'
       replace: '    interpreter_path = "/usr/bin/python3",'
 
